Quorum3/Library/Tests/TypeChecker/Pass/CastFieldIntObjDest.quorum
class Main
    Object o = undefined
    Integer m = undefined
    action Main
        integer t = -1
        Integer k
        k:SetValue(5)
        o = cast(Object, k)
        m = cast(Integer, o)
        t = m:GetValue()

        output t
    end
end