Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjIntObj.quorum
class main
    action Main
        Integer int
        int:SetValue(5)
        Boolean bool = cast(Boolean, int)
    end
end